convert rpc serialize into action serialize on the specification object, will need latest version of yang-js
